# ProyectoVueFlask

./: .gitignore  README.md  calculadora.py
admin/: .envrc  README.md  app.py  docker-compose.yml  pyproject.toml
admin/src/core/: bcrypt.py  board.py  database.py  email.py  seeds.py  user.py  users.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/configuration/: __init__.py  configuration.py
admin/src/core/institutions/: __init__.py  institution.py
admin/src/core/service_requests/: __init__.py  service_request.py
admin/src/core/services/: __init__.py  service.py
admin/src/web/: __init__.py  config.py  error.py  forms.py  routes.py
admin/src/web/api/: authentication.py  institutions.py  profile.py  services.py  services_request.py
admin/src/web/controllers/: auth.py  configuration.py  instituciones.py  institutions.py  members.py  services.py  services_request.py  users.py
admin/src/web/helpers/: auth.py  maintenance.py
admin/src/web/schemas/: authentication.py  institutions.py  profile.py  services.py  services_request.py
admin/src/web/templates/: 404.html  config.html  error.html  home.html  layout.html  maintenance.html
admin/src/web/templates/auth/: login.html  register.html  validate.html
admin/src/web/templates/instituciones/: create_institution.html  index.html  switch_institution.html  update_institution.html
admin/src/web/templates/members/: add.html  edit.html  index.html
admin/static/: error.css  flash.css  form.css  maintenance.css  style.css  update.css
admin/tests/: __init__.py  test_web.py
portal/: package.json  (+2 more)
(+28 files in other folders)
