[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Denis Francisco <francisco.denis87@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
psycopg2-binary = "^2.9.8"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.5.0"
flask-bcrypt = "^1.0.1"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.9.1"
flask-shell-ipython = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
